--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,6 +1,7 @@
 <h1>Stupid Coaching</h1>
-  <form action="answer" method="get">
-  <label for="question">Ask your coach anything:</label>
+<p>Ask your coach anything:</p>
+<form action="answer" method="get">
+
   <input id="question" type="text" name="question">
   <input type="submit" value="Ask!">
 </form>
