--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,1 +1,5 @@
 <h1><%= @response %></h1>
+<%= link_to "Ask again", ask_path %>
+
+<!-- 5 - Backlink from /answer to /ask
+Add a link to /ask on the answer.html.erb view using the link_to Rails helper. -->
